fix: make stars work again and change a few other styles

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
   border-radius: 50%;
   pointer-events: none;
   animation: star-animation linear infinite;
+  z-index: 10;
 }
 
 @keyframes star-animation {
